fixed animation issue where author name gets covered

--- a/css/blog1_css/Anekdota.css
+++ b/css/blog1_css/Anekdota.css
@@ -558,7 +558,7 @@ body:before {
   z-index: 10;
 }
 .video:hover .video-by {
-  opacity: 0;
+  opacity: 1;
 }
 .video-author {
   position: absolute;
